[project]
name = "em2cryo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "mrcfile>=1.5.4",
    "napari>=0.5.6",
    "numpy>=2.0.2",
    "pyqt5>=5.15.11",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
